--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testcafe-cucumber",
+  "name": "testcafe-cucumber-demo",
   "version": "0.0.1",
   "description": "An example integration of TestCafe into CucumberJS",
   "main": "index.js",
