npm test command added

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "testcafe-cucumber-demo",
   "version": "0.0.1",
   "description": "An example integration of TestCafe into CucumberJS",
-  "main": "index.js",
   "author": "helen-dikareva",
+  "scripts": {
+    "test": "./node_modules/.bin/cucumber-js.cmd"
+  },
   "dependencies": {
     "cucumber": "2.0.0-rc.9",
     "testcafe": "^0.14.0"
