--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "./node_modules/.bin/cucumber-js.cmd"
   },
   "dependencies": {
-    "cucumber": "2.0.0-rc.9",
-    "testcafe": "^0.14.0"
+    "cucumber": "4.0.0",
+    "testcafe": "^0.19.0"
   }
 }
